<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="app_title">My Nano Degree Apps!</string>
</resources>
