<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortfolioApp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_title"
            android:id="@+id/textView"
            android:layout_marginTop="17dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/spotify_streamer"
            android:id="@+id/spotify_button"
            android:layout_marginTop="10dp"
            android:background="#F08C35"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/scores_app"
            android:id="@+id/scores_button"
            android:layout_marginTop="10dp"
            android:background="#F08C35"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/library_app"
            android:id="@+id/library_button"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:background="#F08C35"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/build_it_bigger"
            android:id="@+id/build_button"
            android:layout_marginTop="10dp"
            android:background="#F08C35"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/xyz_reader"
            android:id="@+id/xyz_button"
            android:layout_marginTop="10dp"
            android:background="#F08C35"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/capstone"
            android:id="@+id/capstone_button"
            android:layout_marginTop="10dp"
            android:background="#F08C35"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
